unpackaged/main/default/objects/Premium_Code_Batch_Authorization__c/Premium_Code_Batch_Authorization__c.object-meta.xml
<CustomObject>
    <description>This object represents an approval for the generation of a batch of premium codes.</description>
    <label>Demo Premium Code Batch Authorization</label>
    <nameField>
        <displayFormat>PCBA-{000000}</displayFormat>
        <label>Premium Code Batch Authorization Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demo Premium Code Batch Authorizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>