unpackaged/main/default/objects/Premium_Code_Batch_Authorization__c/fields/Authorization_ID__c.field-meta.xml
<CustomField>
    <fullName>Authorization_ID__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Authorization ID</label>
    <type>Text</type>
</CustomField>