unpackaged/main/default/objects/Premium_Code_Batch_Authorization__c/fields/Authorization_request_name__c.field-meta.xml
<CustomField>
    <fullName>Authorization_request_name__c</fullName>
    <label>Authorization request name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>