unpackaged/main/default/objects/Premium_Code_Batch_Authorization__c/fields/Cost_center__c.field-meta.xml
<CustomField>
    <fullName>Cost_center__c</fullName>
    <label>Cost center</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>