unpackaged/main/default/objects/Premium_Code_Batch_Authorization__c/fields/Is_approved__c.field-meta.xml
<CustomField>
    <fullName>Is_approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is approved</label>
    <type>Checkbox</type>
</CustomField>